Fixed bug with scroll bar
Fixed a bug where the horizontal scroll bar was not flush with the edge of the page. This was caused when I put styling to add padding to edge of the site on small screens, I put it on the body instead of doing it on an inner element. So I moved that styling to the appropriate class.

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -15,7 +15,7 @@ body {
   max-width: 100vw;
   height: 100%;
   overflow-x: hidden;
-  margin: 0 1rem;
+  margin: 0;
   padding: 0;
 }
 
@@ -31,6 +31,8 @@ body {
   flex: 1;
   width: 100%;
   max-width: 800px;
+  padding: 0 1rem;
+  box-sizing: border-box;
   margin: 1rem auto;
 }
 
